# Interface_Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  UI.h  main.cpp  ru&en.loc  sempai.loc  subobject.yaml  test.yaml  testShader.glsl
cmake/: AllInclude.cmake  ConfigureDependency.cmake  CreateIE.cmake  CreateInstallTarget.cmake  CreateProjectChecking.cmake  CreateTestPreparation.cmake  CreateTests.cmake  DependencyManagement.cmake  ProjectChecking.cmake
code-checking/: config.hpp.in  main.cpp
debug/: debugLayer.cpp  debugLayer.h
enums/: enums.h
enums/location/: location.h
enums/location2/: location2.cpp
enums/side/: side.h
example-resources/: cos.ieml  fire.glsl  main-interface.ieml  modules.yaml  progress-bar.ieml  ru&en.loc  sempai.loc  test-shader.glsl  test.ieml  test.yaml  testShader.glsl
example-resources/modules/: CMakeLists.txt
example-resources/modules/ConsoleCommandAction/: BasicConsoleCommandAction.cpp  BasicConsoleCommandAction.hpp  BasicConsoleCommandAction.inl  ConsoleCommandAction.cpp  ConsoleCommandAction.hpp
example-resources/modules/consoleCommandEvent/: consoleCommandEvent.cpp  consoleCommandEvent.hpp
iObject/: iObject.cpp  iObject.h
iObject/iFlat/: iFlat.h
iObject/iFlat/iDrawn/: iDrawn.cpp  iDrawn.h
iObject/iFlat/iInteractive/: iInteractive.cpp  iInteractive.h
iObject/iFlat/iLayer/: iLayer.cpp  iLayer.h
iObject/iFlat/interface/: interface.cpp  interface.h
iObject/iFlat/range/: range.h
iObject/iUnscalable/iInteractive/: iInteractive.cpp  iInteractive.h
iObject/iUnscalable/iScalable/: iScalable.h
iObject/iUnscalable/interactive/: interactive.cpp
iObject/layout/: layout.cpp  layout.h
iObject/layout/background/: layoutWithBackground.cpp  layoutWithBackground.h
iObject/layout/object/: layoutWithObject.h
iObject/layout/objectsArray/: layoutWithObjectsArray.h
iObject/layout/twoObjects/: layoutWithTwoObjects.h
iObject/panel/: panel.cpp  panel.h
iObject/panel/interaction/: basePanelInteraction.cpp  basePanelInteraction.h  hidePanelInteraction.h  panelInteraction.cpp  panelInteraction.h
iObject/panel/panel/: basePanel.cpp  basePanel.h
iObject/panel/panelManager/: panelManager.cpp  panelManager.h
iObject/panel/panelStack/: panelStack.cpp  panelStack.h
interaction/event/button/: buttonEvent.cpp  buttonEvent.h
interaction/event/wheel/: wheelEvent.cpp  wheelEvent.h
interaction/iInteraction/: iInteraction.cpp  iInteraction.h
interaction/iInteraction/block/: iBlockInteraction.cpp
interaction/iInteraction/double/: doubleInteraction.cpp  doubleInteraction.h
interaction/iInteraction/empty/: emptyInteraction.cpp  emptyInteraction.h
interaction/iInteraction/mouse/: mouseInteraction.cpp  mouseInteraction.h
interaction/iInteraction/oneButton/: oneButtonInteraction.cpp  oneButtonInteraction.h
interaction/interactionManager/: interactionManager.cpp  interactionManager.h
interaction/interactionStack/: interactionStack.cpp  interactionStack.h
lib/: UI.h  config.h.in  config.hpp.in
lib/IE/: IE.hpp  UI.hpp
lib/IE/Debug/: BoxDebug.cpp  BoxDebug.hpp
lib/IE/IComponent/: IComponent.cpp  IComponent.hpp
lib/IE/ILayout/: ILayout.cpp  ILayout.hpp
lib/IE/Init/: Init.cpp  Init.hpp
lib/IE/Make/: make.hpp
lib/IE/SizingAndPositioning/: SizingAndPositioning.hpp
lib/IE/Window/: Window.cpp  Window.hpp
lib/IE/debug/: boxDebug.hpp
lib/IE/enums/: Enums.hpp
lib/IE/iObject/: iObject.cpp  iObject.hpp
lib/IE/init/: init.hpp
lib/IE/modules/: load_modules.cpp
lib/IE/sizing-positioning/: sizing-positioning.hpp
lib/IE/window/: window.cpp  window.hpp
lib/debug/: debugLayer.cpp  debugLayer.h
lib/drawable/manager/: drawManager.cpp
lib/enums/location2/: location2.h
lib/enums/size/: size.h
lib/iObject/: iObject.cpp  iObject.h
lib/iObject/drawable/: drawable.cpp
lib/iObject/iUnscalable/: iUnscalable.h
lib/interaction/iInteraction/: iInteraction.cpp
lib/interaction/interactionManager/: interactionManager.cpp  interactionManager.h
lib/sizingAndPositioning/positioning2/: basePositioning2.cpp
lib/ui/: UI.h  UI.hpp
lib/ui/debug/: boxDebug.cpp  boxDebug.hpp  debugLayer.cpp  debugLayer.h  debugLayer.hpp
lib/ui/enums/: enums.hpp
lib/ui/iObject/: iObject.cpp  iObject.hpp
lib/ui/init/: init.cpp  init.hpp
lib/ui/localizationSystem/: localizationSystem.cpp  localizationSystem.hpp
lib/ui/make/: make.hpp
lib/ui/range/: range.cpp
lib/ui/sizingAndPositioning/: sizingAndPositioning.hpp
lib/ui/window/: window.cpp  window.hpp
lib/ui/with/: iWith.hpp
lib/ui/yamlInitializer/: yamlBuilderInitializer.cpp  yamlBuilderInitializer.h  yamlBuilderInitializer.hpp
lib/updatable/iUpdatable/: iUpdatable.h
range/: range.h
sizingAndPositioning/: sizingAndPositioning.h
sizingAndPositioning/positioning/: positioning.cpp  positioning.h
sizingAndPositioning/positioning2/: positioning2.cpp  positioning2.h
sizingAndPositioning/sizing/: sizing.cpp  sizing.h
sizingAndPositioning/sizing2/: baseSizing2.cpp  baseSizing2.h  sizing2.cpp  sizing2.h
test-preparation/: config.hpp.in  for_files.hpp  main.cpp
test/_test/: _imageEqual.cpp
test/createTestProgram/: createTestProgram.cpp  createTestProgram.hpp
test/testsObjects/: processorTime.hpp
(+3332 files in other folders)
